app/src/main/java/com/example/carto/feature/addresses/data/remote/error/SetDefaultAddressError.kt
package com.example.carto.feature.addresses.data.remote.error

sealed interface SetDefaultAddressError {
    data object UnKnown: SetDefaultAddressError
}